--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
 "dependencies": {
-    "next": "15.1.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "@supabase/supabase-js": "^2.47.10",
     "lucide-react": "^0.469.0",
     "tailwindcss": "^3.4.1",
