--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16"
+  "framer-motion": "latest"
   },
   "devDependencies": {
     "typescript": "^5",
