--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
-"dependencies": {
+  "dependencies": {
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -16,8 +16,8 @@
     "lucide-react": "^0.469.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
-  "framer-motion": "latest"
+    "autoprefixer": "^10.4.16",
+    "framer-motion": "latest"
   },
   "devDependencies": {
     "typescript": "^5",
