--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16",
     "framer-motion": "latest"
+    "demofile": "^3.0.0",
+    "axios": "^1.7.9",
+    "unbzip2-stream": "^1.4.3"
   },
   "devDependencies": {
     "typescript": "^5",
